<resources>
    <string name="app_name">Lightweight CRM</string>

    <string name="title_main">Tracking</string>
    <string name="title_profile">Profile</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_settings">Settings</string>

    <string name="start_time">Started at: %1$s</string>
    <string name="worked_time">Worked time: %1$s</string>

    <string name="start_tracking">Start</string>
    <string name="stop_tracking">Stop</string>
    <string name="notification_message">What did you do in last hour?</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login_button">Log in</string>
    <string name="login_edit_text_hint">Your UUID</string>
    <string name="title">LightweightCRM</string>
    <string name="wrong_uuid">Your UUID is not valid</string>
    <string name="detail_activity_save_changes_button">Save changes</string>
    <string name="profile_title"><u>Profile:</u></string>
    <string name="user_name_title">User name: %1$s</string>
    <string name="user_position_title">Position: %1$s</string>
    <string name="user_offline_message">You are offline. Connect your device to the Internet</string>
    <string name="profile_logout">Logout</string>

    <string name="image_content_description">Netspace logo</string>
    <string name="task_item_image_description">is task loaded to the server</string>
    <string name="detail_activity_title"><u><b>Title</b></u></string>
    <string name="detail_activity_description"><u><b>Description</b></u></string>
    <string name="detail_activity_hint_title">Type title here</string>
    <string name="detail_activity_hint_description">Type description here</string>
    <string name="detail_activity_start_time">Start:</string>
    <string name="detail_activity_finish_time">End:</string>
    <string name="detail_activity_save_button">Save</string>

    <string name="logout_dialog_message">Do you want to logout?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="activity_detail_arrow_description">Arrow show worked time</string>
    <string name="auto_fill_date_in_new_task">DateAutoFill</string>
    <string name="settings_auto_fill_date_title">Automatically fill date in new tasks</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_is_empty_message">Title can not be empty. Please fill that field</string>
    <string name="description_is_empty_message">Description of task can not be empty</string>
    <string name="unable_save_changes_message">Unable to save changes</string>
    <string name="title_of_task">Title</string>
    <string name="description_of_task">Description</string>
    <string name="dialog_set_date_title">Choose date</string>
    <string name="dialog_set_time_title">Choose time</string>
    <string name="incorrect_time_message">Start time can not larger then finish time</string>
    <string name="changes_not_saved_message">Some changes is not saved. Do you want exit?</string>
    <string name="no_changes">There is no changes to save</string>
    <string name="prefs_key_load_per_page">keyLoadPerPage</string>
    <string name="pref_title_load_per_page">Load per page</string>
    <string name="changes_saved">Changes saved</string>
    <string name="default_page_of_tasks_count">25</string>
    <string name="changes_not_saved">Changes not uploaded to server</string>
    <string name="list_empty_text_view">You have not tasks</string>
    <string name="drawer_item_icon">icon for drawer</string>
    <string name="logout_pref_key">settings_logout</string>

</resources>
